<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App and Activities -->
    <string name="app_name">RomanTick</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_actions">To Do List</string>
    <string name="title_activity_add_or_edit_action">To Do</string>
    <string name="title_activity_list_kisses">Kiss Log</string>
    <string name="title_activity_add_or_edit_kiss">Kiss</string>
    <string name="title_activity_filter_kisses">Filter Kisses</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>

    <!-- Text Views -->
    <string name="text_summary">Summary</string>
    <string name="text_date">Date</string>
    <string name="text_noDate">No Date</string>
    <string name="text_filters">Filters</string>
    <string name="text_status">Status</string>
    <string name="text_location">Location</string>

    <!-- Buttons -->
    <string name="button_todo">To Do List</string>
    <string name="buton_kiss_log">Kiss Log</string>
    <string name="button_travel_ideas">Travel Ideas</string>
    <string name="button_add_new">Add New&#8230;</string>
 <!-- &#8230; inserts '...' -->
    <string name="button_edit">Edit&#8230;</string>
    <string name="button_delete">Delete&#8230;</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select_date">Set</string>
    <string name="button_clear">Clear</string>
    <string name="button_ok">OK</string>

    <!-- String Array Items -->
    <string name="done">Done</string>
    <string name="not_done">Not Done</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <!-- Locations -->
    <string name="edinburgh">Edinburgh</string>
    <string name="london">London</string>
    
    <!-- Checkboxes -->
    <string name="apply_filters">Apply filters</string>
    
    <!-- Misc -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_filter_kisses">ActivityFilterKisses</string>

</resources>
