<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_KissDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button_selectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:minHeight="20dip"
                android:minWidth="50dip"
                android:onClick="setDate"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="@string/button_select_date"
                android:textAppearance="?android:attr/textAppearanceSmallInverse" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_KissDateDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_noDate"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
                
        <TextView
            android:id="@+id/textView_KissSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_summary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_KissSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_Save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/holo_green_light"
            android:onClick="saveKiss"
            android:padding="5dp"
            android:text="@string/button_save" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_Delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/holo_green_light"
            android:onClick="deleteKiss"
            android:padding="5dp"
            android:text="@string/button_delete" />

	</LinearLayout>

</LinearLayout>
