<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp" >

    <Button
        android:id="@+id/button_ToDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
	    android:onClick="showToDoList"
        android:gravity="center"
        android:text="@string/button_todo" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button_KissLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
	    android:onClick="showKissLog"
        android:gravity="center"
        android:text="@string/buton_kiss_log" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button_TravelIdeas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
	    android:onClick="showTravelIdeasList"
        android:gravity="center"
        android:enabled="false"
        android:text="@string/button_travel_ideas" />
</LinearLayout>
