<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.examples.romantick.ActivityAddOrEditAction"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/layout_EditControls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView_Summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/text_summary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorLink="@android:color/holo_green_light" />
       
	</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_Edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/holo_green_light"
                android:onClick="editAction"
                android:padding="5dp"
                android:text="@string/button_edit" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_Delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/holo_green_light"
                android:onClick="deleteAction"
                android:padding="5dp"
                android:text="@string/button_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_Save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/holo_green_light"
                android:onClick="saveAction"
                android:padding="5dp"
                android:text="@string/button_save" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/holo_green_light"
                android:onClick="cancelEdit"
                android:padding="5dp"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </FrameLayout>
 
</LinearLayout>