<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.examples.romantick.ActivityFilterKisses"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_filters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="15dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <CheckBox
                android:id="@+id/checkBox_KissesStatus"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center_vertical|start"
                android:text="@string/text_status" />

            <Spinner
                android:id="@+id/spinner_KissesStatus"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" 
                android:layout_gravity="left"
                android:entries="@array/spinnerStatusItems"/>
            
            <Space 
                android:layout_height="fill_parent"
                android:layout_width="1dp"
                android:layout_weight="0.4" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <CheckBox
                android:id="@+id/checkBox_KissesDate"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center_vertical|start"
                android:text="@string/text_date" />

            <Spinner
                android:id="@+id/spinner_KissesDate"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" 
                android:layout_gravity="left"
                android:entries="@array/spinnerDateItems"/>

            <TextView
                android:id="@+id/textView_selectedKissesDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
                android:layout_weight="0.4" />
            
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="saveFilters"
        android:background="@android:color/holo_green_light"
        android:text="@string/button_ok" />

</LinearLayout>

