<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

            <TextView
                android:id="@+id/textView_filters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setFilters"
                android:text="@string/text_filters"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button_selectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:minHeight="20dip"
                android:minWidth="50dip"
                android:onClick="clearFilters"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="@string/button_clear"
                android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    </LinearLayout>

    <Space 
        android:layout_height="5dp" 
        android:layout_width="wrap_content" />

    <GridLayout
        android:id="@+id/gridLayout_kissFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:numColumns="1" >

        <ListView
            android:id="@+id/listView_kissFilter"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0" >
        </ListView>
    </GridLayout>

    <Space 
        android:layout_height="10dp" 
        android:layout_width="wrap_content" />

    <ListView
        android:id="@+id/listView_allKisses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="10dp" >

    </ListView>

	<Button
	    android:id="@+id/button_AddNewKiss"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/holo_green_light"
	    android:onClick="addNewKiss"
	    android:text="@string/button_add_new" />
    

</LinearLayout>
